# svg-mcp

./: .gitignore  BUILD_GUIDE.md  Cargo.toml  DEPLOYMENT.md  Makefile  NPM_USAGE.md  README.md  USAGE.md  build-all.ps1  build-all.sh  build-packages.ps1  build-simple.ps1  build-windows.ps1  index.js  install.js  package-lock.json  package-manager.ps1  package.json  test-npm-packages.ps1
.github/: copilot-instructions.md
.github/workflows/: build.yml
scripts/: build-packages.js  package-manager.js  publish-main-package.js  publish-platform-packages.js
src/: lib.rs  main.rs  test.rs
