[package]
name = "svg-mcp"
version = "0.1.0"
edition = "2021"

[lib]
name = "svg_mcp"
path = "src/lib.rs"

[[bin]]
name = "svg-mcp"
path = "src/main.rs"

[[bin]]
name = "test"
path = "src/test.rs"

[dependencies]
# MCP SDK
rmcp = { version = "0.2.0", features = ["server", "macros", "transport-io"] }

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Image conversion
resvg = "0.41.0"
usvg = "0.41.0"
tiny-skia = "0.11.4"
image = { version = "0.25", features = ["jpeg"] }

# Base64 encoding
base64 = "0.22.0"

# Error handling
anyhow = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Temporary file handling
tempfile = "3.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# JSON Schema
schemars = { version = "0.8", features = ["chrono"] }
